[tool.poetry]
name = "airbnb-clone-backend"
version = "0.1.0"
description = ""
authors = ["jambam-cho <hs.cho@bucketplace.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.5"
Pillow = "^9.4.0"
djangorestframework = "^3.14.0"
PyJWT = "^2.6.0"
django-environ = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
